...
            android:layout_marginEnd="24dp"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/roboto"
            android:text="@string/male"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/radio_f"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_question"
            tools:ignore="RtlHardcoded" />

        <RadioButton
            android:id="@+id/radio_f"
...
            app:layout_constraintTop_toBottomOf="@+id/gender_question"
            tools:ignore="RtlHardcoded" />

    </RadioGroup>

    <Button
        android:id="@+id/genderNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_family"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
...
